fix: fix jump in product amount * fix jump in product__amount-btns when product-num changed

--- a/src/blocks/product/__amount-num/product__amount-num.css
+++ b/src/blocks/product/__amount-num/product__amount-num.css
@@ -1,3 +1,5 @@
 .product__amount-num {
-  margin: 0 5px;
+  margin: 0 3px;
+  width: 20px;
+  text-align: center;
 }
